// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PathoscopeIsolate /> should render 1`] = `
<div>
  <Isolate__PathoscopeIsolateHeader>
    Isolate A
    <PathoscopeIsolateWeight
      reads={102}
      showReads={false}
    />
    <strong
      className="small text-danger"
    >
      13
    </strong>
    <strong
      className="small text-primary"
    >
      NaN
    </strong>
  </Isolate__PathoscopeIsolateHeader>
  <Isolate__PathoscopeChartContainer>
    <Isolate__PathoscopeChartRibbon>
      <CoverageChart
        data={
          Array [
            1,
            2,
            3,
            4,
            5,
          ]
        }
        definition="Foo Hit"
        id="foo"
        key="0"
        length={5}
        showYAxis={true}
        yMax={22}
      />
      <CoverageChart
        data={
          Array [
            1,
            2,
            3,
            4,
            5,
            4,
            2,
            3,
          ]
        }
        definition="Bar Hit"
        id="bar"
        key="1"
        length={8}
        showYAxis={false}
        yMax={22}
      />
    </Isolate__PathoscopeChartRibbon>
  </Isolate__PathoscopeChartContainer>
</div>
`;

exports[`<PathoscopeIsolateWeight /> should render reads 1`] = `
<strong
  className="small text-success"
>
  121
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight 1`] = `
<strong
  className="small text-success"
>
  0.321
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight in scientific notation 1`] = `
<strong
  className="small text-success"
>
  3.21E-7
</strong>
`;
